Fixed issue #270, add group with a transform element to shift the contents to the right

--- a/game/static/game/css/level_editor.css
+++ b/game/static/game/css/level_editor.css
@@ -181,7 +181,7 @@ input {
 
 input[type="checkbox"].block_checkbox {
     cursor: pointer;
-    margin-right: 30px;
+    margin-right: 25px;
 }
 
 .block_image text {
